[gd_scene load_steps=3 format=3 uid="uid://dq1008aj3xg6c"]

[ext_resource type="Script" path="res://scripts/input_options_menu.gd" id="1_cmmv6"]
[ext_resource type="PackedScene" uid="uid://4t4cili1jmw2" path="res://scenes/input_button.tscn" id="2_tin47"]

[node name="InputOptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_cmmv6")

[node name="select_controls" type="Label" parent="."]
top_level = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -286.0
offset_top = -124.0
offset_right = -286.0
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
text = "Seleccionar Controles
"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -124.0
offset_right = 184.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -92.0
offset_right = 176.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="action_list" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="input_button" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/action_list" instance=ExtResource("2_tin47")]
layout_mode = 2

[node name="reset_button" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Resetear controles"

[node name="exit_button" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volver"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/reset_button" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/exit_button" to="." method="_on_exit_button_pressed"]
